feat: Build jar with dependencies, document how to run it from command line and override the log4j2 configuration.